--- a/user_css/home.css
+++ b/user_css/home.css
@@ -95,7 +95,7 @@ svg {
     height: 40px;
 }
 body {
-    background: #dadada url('https://i.ibb.co/60bz79X/image.png') repeat;
+    background: #dadada url('https://iili.io/XCkWCX.png') repeat;
     /*background-color: #f3f7f7;*/
     font-size: 1.2rem;
     line-height: 1.6;
