--- a/user_css/game.css
+++ b/user_css/game.css
@@ -1,2 +1,102 @@
-body{background-image: url(https://iili.io/XCkXGn.png); background-repeat: no-repeat; background-position: center; background-size: cover; background-attachment: fixed; text-align: center;font:17px sans-serif;line-height:1.25;color:#fff;overflow:hidden;background-color:#fff;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;text-size-adjust:100%}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;text-decoration:none;color:#fff;background-color:transparent}a:hover,a:active,a:focus{outline:0}a:active{color:#fff}a:link{-webkit-tap-highlight-color:transparent;tap-highlight-color:transparent}.adsbygoogle{display:inline-block}.ad.skyscraper1,.ad.skyscraper2,.ad.skyscraper1 .adsbygoogle,.ad.skyscraper2 .adsbygoogle{width:300px;height:600px}.ad.skyscraper1{position:absolute;top:50%;margin-top:-300px;left:0}.ad.skyscraper2{position:absolute;top:50%;margin-top:-300px;right:0}.content{position:absolute;left:0;top:50%;margin-top:-300px;right:0;text-align:center;}
+body {
+    background-image: url(https://iili.io/XCkXGn.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    font: 17px sans-serif;
+    line-height: 1.25;
+    color: #fff;
+    overflow: hidden;
+    background-color: #fff;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%
+}
+
+.fullscreen_button {
+    background-color: #555555;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+}
+
+.fullscreen_button {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.fullscreen_button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+a {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    text-decoration: none;
+    color: #fff;
+    background-color: transparent
+}
+
+a:hover,
+a:active,
+a:focus {
+    outline: 0
+}
+
+a:active {
+    color: #fff
+}
+
+a:link {
+    -webkit-tap-highlight-color: transparent;
+    tap-highlight-color: transparent
+}
+
+.adsbygoogle {
+    display: inline-block
+}
+
+.ad.skyscraper1,
+.ad.skyscraper2,
+.ad.skyscraper1 .adsbygoogle,
+.ad.skyscraper2 .adsbygoogle {
+    width: 300px;
+    height: 600px
+}
+
+.ad.skyscraper1 {
+    position: absolute;
+    top: 50%;
+    margin-top: -300px;
+    left: 0
+}
+
+.ad.skyscraper2 {
+    position: absolute;
+    top: 50%;
+    margin-top: -300px;
+    right: 0
+}
+
+.content {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -300px;
+    right: 0;
+    text-align: center;
+}
+
 </style>
