--- a/user_css/home.css
+++ b/user_css/home.css
@@ -1,12 +1,14 @@
 /* front end */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins" , sans-serif;
-  }
-  .sidebar{
+    font-family: "Poppins", sans-serif;
+}
+
+.sidebar {
     position: fixed;
     left: 0;
     top: 0;
@@ -16,32 +18,38 @@
     padding: 6px 14px;
     z-index: 99;
     transition: all 0.5s ease;
-  }
-  .sidebar.open{
+}
+
+.sidebar.open {
     width: 250px;
-  }
-  .sidebar .logo-details{
+}
+
+.sidebar .logo-details {
     height: 60px;
     display: flex;
     align-items: center;
     position: relative;
-  }
-  .sidebar .logo-details .icon{
+}
+
+.sidebar .logo-details .icon {
     opacity: 0;
     transition: all 0.5s ease;
-  }
-  .sidebar .logo-details .logo_name{
+}
+
+.sidebar .logo-details .logo_name {
     color: #fff;
     font-size: 15px;
     font-weight: 600;
     opacity: 0;
     transition: all 0.5s ease;
-  }
-  .sidebar.open .logo-details .icon,
-  .sidebar.open .logo-details .logo_name{
+}
+
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name {
     opacity: 1;
-  }
-  .sidebar .logo-details #btn{
+}
+
+.sidebar .logo-details #btn {
     position: absolute;
     top: 50%;
     right: 0;
@@ -52,28 +60,33 @@
     text-align: center;
     cursor: pointer;
     transition: all 0.5s ease;
-  }
-  .sidebar.open .logo-details #btn{
+}
+
+.sidebar.open .logo-details #btn {
     text-align: right;
-  }
-  .sidebar i{
+}
+
+.sidebar i {
     color: #fff;
     height: 60px;
     min-width: 50px;
     font-size: 28px;
     text-align: center;
     line-height: 60px;
-  }
-  .sidebar .nav-list{
+}
+
+.sidebar .nav-list {
     margin-top: 20px;
     height: 100%;
-  }
-  .sidebar li{
+}
+
+.sidebar li {
     position: relative;
     margin: 8px 0;
     list-style: none;
-  }
-  .sidebar li .tooltip{
+}
+
+.sidebar li .tooltip {
     position: absolute;
     top: -20px;
     left: calc(100% + 15px);
@@ -88,18 +101,21 @@
     white-space: nowrap;
     pointer-events: none;
     transition: 0s;
-  }
-  .sidebar li:hover .tooltip{
+}
+
+.sidebar li:hover .tooltip {
     opacity: 1;
     pointer-events: auto;
     transition: all 0.4s ease;
     top: 50%;
     transform: translateY(-50%);
-  }
-  .sidebar.open li .tooltip{
+}
+
+.sidebar.open li .tooltip {
     display: none;
-  }
-  .sidebar input{
+}
+
+.sidebar input {
     font-size: 15px;
     color: #FFF;
     font-weight: 400;
@@ -111,12 +127,14 @@
     border-radius: 12px;
     transition: all 0.5s ease;
     background: #1d1b31;
-  }
-  .sidebar.open input{
+}
+
+.sidebar.open input {
     padding: 0 20px 0 50px;
     width: 100%;
-  }
-  .sidebar .bx-search{
+}
+
+.sidebar .bx-search {
     position: absolute;
     top: 50%;
     left: 0;
@@ -124,16 +142,19 @@
     font-size: 22px;
     background: #1d1b31;
     color: #FFF;
-  }
-  .sidebar.open .bx-search:hover{
+}
+
+.sidebar.open .bx-search:hover {
     background: #1d1b31;
     color: #FFF;
-  }
-  .sidebar .bx-search:hover{
+}
+
+.sidebar .bx-search:hover {
     background: #FFF;
     color: #11101d;
-  }
-  .sidebar li a{
+}
+
+.sidebar li a {
     display: flex;
     height: 100%;
     width: 100%;
@@ -142,11 +163,13 @@
     text-decoration: none;
     transition: all 0.4s ease;
     background: #11101D;
-  }
-  .sidebar li a:hover{
+}
+
+.sidebar li a:hover {
     background: #FFF;
-  }
-  .sidebar li a .links_name{
+}
+
+.sidebar li a .links_name {
     color: #fff;
     font-size: 15px;
     font-weight: 400;
@@ -154,23 +177,27 @@
     opacity: 0;
     pointer-events: none;
     transition: 0.4s;
-  }
-  .sidebar.open li a .links_name{
+}
+
+.sidebar.open li a .links_name {
     opacity: 1;
     pointer-events: auto;
-  }
-  .sidebar li a:hover .links_name,
-  .sidebar li a:hover i{
+}
+
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i {
     transition: all 0.5s ease;
     color: #11101D;
-  }
-  .sidebar li i{
+}
+
+.sidebar li i {
     height: 50px;
     line-height: 50px;
     font-size: 18px;
     border-radius: 12px;
-  }
-  .sidebar li.profile{
+}
+
+.sidebar li.profile {
     position: fixed;
     height: 60px;
     width: 78px;
@@ -180,33 +207,39 @@
     background: #1d1b31;
     transition: all 0.5s ease;
     overflow: hidden;
-  }
-  .sidebar.open li.profile{
+}
+
+.sidebar.open li.profile {
     width: 250px;
-  }
-  .sidebar li .profile-details{
+}
+
+.sidebar li .profile-details {
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
-  }
-  .sidebar li img{
+}
+
+.sidebar li img {
     height: 45px;
     width: 45px;
     object-fit: cover;
     border-radius: 6px;
     margin-right: 10px;
-  }
-  .sidebar li.profile .name,
-  .sidebar li.profile .job{
+}
+
+.sidebar li.profile .name,
+.sidebar li.profile .job {
     font-size: 15px;
     font-weight: 400;
     color: #fff;
     white-space: nowrap;
-  }
-  .sidebar li.profile .job{
+}
+
+.sidebar li.profile .job {
     font-size: 12px;
-  }
-  .sidebar .profile #log_out{
+}
+
+.sidebar .profile #log_out {
     position: absolute;
     top: 50%;
     right: 0;
@@ -217,12 +250,14 @@
     line-height: 60px;
     border-radius: 0px;
     transition: all 0.5s ease;
-  }
-  .sidebar.open .profile #log_out{
+}
+
+.sidebar.open .profile #log_out {
     width: 50px;
     background: none;
-  }
-  .home-section{
+}
+
+.home-section {
     position: relative;
     background: #E4E9F7;
     min-height: 100vh;
@@ -231,34 +266,42 @@
     width: calc(100% - 78px);
     transition: all 0.5s ease;
     z-index: 2;
-  }
-  .sidebar.open ~ .home-section{
+}
+
+.sidebar.open~.home-section {
     left: 250px;
     width: calc(100% - 250px);
-  }
-  .home-section .text{
+}
+
+.home-section .text {
     display: inline-block;
     color: #11101d;
     font-size: 25px;
     font-weight: 500;
     margin: 18px
-  }
-  @media (max-width: 420px) {
-    .sidebar li .tooltip{
-      display: none;
+}
+
+@media (max-width: 420px) {
+    .sidebar li .tooltip {
+        display: none;
     }
-  }
-  
-h1, h2, h3, h4, h5, h6 {
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 500;
     margin: 0;
 }
 
-a:hover{
+a:hover {
     text-decoration: none;
 }
 
-.nav-link{
+.nav-link {
     display: flex;
     align-items: center;
     margin-right: 10px;
@@ -266,25 +309,29 @@ a:hover{
     background-color: #FFFFFF;
     color: #b7c9cc;
     border: 1px solid #b7c9cc;
-	font-size: 1rem;
-	padding: 10px 20px;
+    font-size: 1rem;
+    padding: 10px 20px;
     font-weight: 600;
     border-radius: 3px;
 }
-.navbar .is{
-	width: 30px;
+
+.navbar .is {
+    width: 30px;
     color: #9e9e9e;
     position: absolute;
     top: 4px;
     right: 0;
 }
-.navbar-nav .nav-link{
-	padding-right: 20px;
+
+.navbar-nav .nav-link {
+    padding-right: 20px;
     padding-left: 20px;
 }
-.navbar-collapse{
-	flex-grow: unset;
+
+.navbar-collapse {
+    flex-grow: unset;
 }
+
 .navbar-light .navbar-nav .nav-link:hover {
     border: 1px solid #5eba00;
     background-color: #FFFFFF;
@@ -296,14 +343,17 @@ a:hover{
     background-color: #FFFFFF;
     color: #5eba00 !important;
 }
-#MobileCategory{
-	margin: 10px 0;
+
+#MobileCategory {
+    margin: 10px 0;
 }
-#MobileCategory .cb{
-	margin-bottom: 10px;
+
+#MobileCategory .cb {
+    margin-bottom: 10px;
 }
-#MobileCategory .mb{
-	width: 100%;
+
+#MobileCategory .mb {
+    width: 100%;
     background: #fff;
     padding: 5px;
     border-radius: 5px;
@@ -314,22 +364,27 @@ a:hover{
     font-weight: 600;
     font-size: 1rem;
 }
+
 .nav-link svg {
     margin-right: 5px;
 }
-.dropdown .nav-link{
-	border: none;
-	background: none;
-	padding: 0;
+
+.dropdown .nav-link {
+    border: none;
+    background: none;
+    padding: 0;
 }
-.dropdown .nav-link:hover{
-	border: none !important;
+
+.dropdown .nav-link:hover {
+    border: none !important;
 }
-.dropdown-menu{
-	min-width: initial;
+
+.dropdown-menu {
+    min-width: initial;
 }
-.dropdown-item{
-	padding: 0 10px;
+
+.dropdown-item {
+    padding: 0 10px;
 }
 
 svg {
@@ -344,6 +399,7 @@ svg {
 .navbar-brand img {
     height: 40px;
 }
+
 body {
     min-height: 100vh;
     width: 100%;
@@ -355,7 +411,8 @@ body {
     color: #39424e;
     margin-bottom: 120px;
 }
-.sidebar{
+
+.sidebar {
     position: fixed;
     top: 0;
     left: 0;
@@ -365,10 +422,12 @@ body {
     padding: 6px 14px;
     transition: all 0.5s ease;
 }
-.sidebar.open{
+
+.sidebar.open {
     width: 240px;
 }
-.sidebar .logo_content .logo{
+
+.sidebar .logo_content .logo {
     color: #fff;
     display: flex;
     height: 50px;
@@ -377,10 +436,12 @@ body {
     opacity: 0;
     pointer-events: none;
 }
-sidebar.open .logo_content .logo{
+
+sidebar.open .logo_content .logo {
     opacity: 1;
     pointer-events: none;
 }
+
 html {
     position: relative;
     min-height: 100%;
@@ -407,9 +468,12 @@ html {
     color: white;
 }
 
+
 /* End categories-menu */
 
+
 /* CarouselComponent */
+
 #CarouselComponent {
     padding: 45px 0 45px;
 }
@@ -419,17 +483,22 @@ html {
     margin-bottom: 10px;
 }
 
+
 /* End CarouselComponent */
 
+
 /* featured */
+
 #Featured {
     margin: 30px 0;
 }
-#MobileCategory svg{
-	margin-bottom: 5px;
-	height: 16px;
-	width: 16px;
+
+#MobileCategory svg {
+    margin-bottom: 5px;
+    height: 16px;
+    width: 16px;
 }
+
 .col-md-5ths {
     width: 9%;
     padding: 0 8px;
@@ -437,9 +506,12 @@ html {
     display: inline-block;
 }
 
+
 /* featured */
 
+
 /* gamelist */
+
 #GameList {
     margin: 20px 0;
 }
@@ -487,7 +559,12 @@ html {
     border-radius: 0 16px 16px 0;
 }
 
-#TextBox h1, h2, h3, h4, h5, h6 {
+#TextBox h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: 10px;
 }
 
@@ -498,8 +575,9 @@ html {
 #TextBox {
     margin: 30px 0;
 }
-.store img{
-	height: 40px;
+
+.store img {
+    height: 40px;
 }
 
 .card-header.category {
@@ -548,7 +626,12 @@ html {
     color: #444444;
 }
 
-#TextBox h1, h2, h3, h4, h5, h6 {
+#TextBox h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #39424e;
     font-weight: 500;
 }
@@ -556,10 +639,12 @@ html {
 #TextBox a {
     color: #1ba94c;
 }
-.fb-like{
-	padding: 0 10px 10px 10px;
+
+.fb-like {
+    padding: 0 10px 10px 10px;
 }
-#SearchResult{
+
+#SearchResult {
     position: absolute;
     top: 40px;
     left: 0;
@@ -568,30 +653,33 @@ html {
     background: white;
     max-height: 800px;
     overflow: hidden;
-    overflow-y: visible;
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.24);
 }
-#MobileSearchResult{
-	max-height: 400px;
+
+#MobileSearchResult {
+    max-height: 400px;
     overflow: hidden;
-    overflow-y: visible;
     padding: 10px 0;
     background: white;
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, .24);
     border-radius: 0 0 5px 5px;
 }
-#SearchResult .cb img{
-	height: 84px;
-	width: 84px;
-	border-radius: 15px 0 0 15px;
+
+#SearchResult .cb img {
+    height: 84px;
+    width: 84px;
+    border-radius: 15px 0 0 15px;
 }
-#SearchResult .cb{
-	border-radius: 15px;
+
+#SearchResult .cb {
+    border-radius: 15px;
 }
-#SearchResult>.row{
-	border: 1px solid #ced4da;
-	padding: 10px 0;
+
+#SearchResult>.row {
+    border: 1px solid #ced4da;
+    padding: 10px 0;
 }
+
 footer {
     background-color: #fff;
     padding: 15px;
@@ -600,32 +688,40 @@ footer {
     bottom: 0;
     left: 0;
 }
-footer .icon{
-	height: 40px;
+
+footer .icon {
+    height: 40px;
 }
-.loading-icon{
-	width: 24px;
-	height: 24px;
-	position: absolute;
+
+.loading-icon {
+    width: 24px;
+    height: 24px;
+    position: absolute;
     top: 5px;
     left: -1px;
     font-size: 5px;
 }
+
 footer a {
     color: black;
     padding: 10px;
 }
-footer .about{
-	display: flex;
-	justify-content: flex-end;
+
+footer .about {
+    display: flex;
+    justify-content: flex-end;
 }
+
 footer .fa {
     font-size: 30px;
 }
 
+
 /* footer */
 
+
 /* game play */
+
 .bottom-bar-game-frame img {
     margin: 12px 12px 12px 0;
     width: 40px;
@@ -688,6 +784,7 @@ footer .fa {
     margin: 12px 0;
     color: #8e8d8d;
 }
+
 
 /* game play */
 
@@ -778,19 +875,20 @@ footer .fa {
     overflow: hidden;
 }
 
-#AdLeft{
-	position: fixed;
-	width: 180px;
-	left: 0;
-	top: 210px;
-	overflow: hidden;
+#AdLeft {
+    position: fixed;
+    width: 180px;
+    left: 0;
+    top: 210px;
+    overflow: hidden;
 }
-#AdRight{
-	position: fixed;
-	width: 180px;
-	right: 0;
-	top: 210px;
-	overflow: hidden;
+
+#AdRight {
+    position: fixed;
+    width: 180px;
+    right: 0;
+    top: 210px;
+    overflow: hidden;
 }
 
 #categories-menu i {
@@ -868,30 +966,37 @@ footer .fa {
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, .24);
     display: block;
 }
+
 .gc2:hover img {
     transform: scale(1.0425531915) translate3d(0, -4px, 0);
     transition-duration: .3s;
 }
-.gc2 .hg{
-	height: 38px;
-	overflow: hidden;
+
+.gc2 .hg {
+    height: 38px;
+    overflow: hidden;
 }
-.ac{
-	height: 480px;
+
+.ac {
+    height: 480px;
 }
-.sac{
-	height: 380px;
-	background: hsla(0,0%,100%,.5);
+
+.sac {
+    height: 380px;
+    background: hsla(0, 0%, 100%, .5);
 }
-.ac2{
-	height: 240px;
-	background: hsla(0,0%,100%,.5);
+
+.ac2 {
+    height: 240px;
+    background: hsla(0, 0%, 100%, .5);
 }
+
 .gc2:hover {
     text-decoration: none;
 }
-.gc2 h6{
-	margin-bottom: 10px;
+
+.gc2 h6 {
+    margin-bottom: 10px;
 }
 
 .gc2 {
@@ -907,8 +1012,8 @@ footer .fa {
     border-radius: 25px;
 }
 
-.search-nav{
-	position: relative;
+.search-nav {
+    position: relative;
 }
 
 .playgame-button {
@@ -949,10 +1054,12 @@ footer .fa {
     font-size: 1rem;
     border: 1px solid white;
 }
-#CategoriesMenu .button-container:hover{
-	color: #5eba00;
-	border: 1px solid #5eba00;
+
+#CategoriesMenu .button-container:hover {
+    color: #5eba00;
+    border: 1px solid #5eba00;
 }
+
 #CategoriesMenu .button-container svg {
     margin: 5px;
 }
@@ -968,7 +1075,7 @@ footer .fa {
     height: 34px;
     background: white;
     color: #727981;
-    box-shadow: 0 0 0 1px rgba(0,0,0,0.04), 0 4px 8px 0 rgba(0,0,0,0.20);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 4px 8px 0 rgba(0, 0, 0, 0.20);
 }
 
 .cm-nav .feather-chevron-left {
@@ -982,6 +1089,7 @@ footer .fa {
     right: -10px;
     top: 36px;
 }
+
 .section-title {
     width: 100%;
     height: 100px;
@@ -992,9 +1100,11 @@ footer .fa {
     color: #39424e;
 }
 
+
 /*********************
 override
 *********************/
+
 .cm .cb:hover {
     transform: none;
 }
@@ -1017,14 +1127,17 @@ override
     width: 400px;
     position: relative;
 }
-.search-form .si{
-	height: 42px;
+
+.search-form .si {
+    height: 42px;
 }
-.search-form svg{
-	cursor: initial;
+
+.search-form svg {
+    cursor: initial;
 }
-.navbar-collapse .is{
-	right: 10px;
+
+.navbar-collapse .is {
+    right: 10px;
 }
 
 @media (min-width: 768px) {
@@ -1033,50 +1146,48 @@ override
         text-align: center;
         padding: 8px;
     }
-
     #game-container {
         height: 650px;
     }
-
     .bottom-bar-game-frame {
         height: 64px;
     }
-
     #categories-menu .list2 {
         position: absolute;
         top: 40px;
         left: 0;
     }
-
     #CarouselComponent .carousel-inner {
         border-radius: 20px;
         height: 420px;
     }
-
     #CategoriesMenu {
         display: flex !important;
     }
 }
 
 @media (min-width: 1680px) {
-	#AdRight, #AdLeft{
-		width: 260px;
-	}
+    #AdRight,
+    #AdLeft {
+        width: 260px;
+    }
 }
 
 @media (min-width: 1200px) {
-	.nav-link, #CategoriesMenu .button-container{
-		text-transform: uppercase;
-	}
-	.fb-like{
-		text-align: end;
-	}
+    .nav-link,
+    #CategoriesMenu .button-container {
+        text-transform: uppercase;
+    }
+    .fb-like {
+        text-align: end;
+    }
 }
 
 @media only screen and (max-width: 1510px) {
-	#AdRight, #AdLeft{
-		display: none;
-	}
+    #AdRight,
+    #AdLeft {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1084,59 +1195,49 @@ override
         margin-bottom: 10px;
     }
     .nav-item .btn {
-    	text-transform: none;
+        text-transform: none;
     }
-
     .gap-10-mobile {
         padding: 10px 0;
     }
     .margin-bottom-10-mobile {
         margin-bottom: 10px
     }
-    #categories-menu .list {
-        overflow-y: hidden;
-    }
+    #categories-menu .list {}
     .iframe-container {
         height: 100%;
     }
-
     #PlayGame {
         margin: 0 0 15px 0;
     }
-
     #PlayGame .game-image {
         max-height: 240px;
         overflow: hidden;
     }
-
     #ExitButtonFullScreen {
-	    padding: 8px 0;
-	    background: white;
-	    border-radius: 0px 10px 10px 0px;
-	    width: 55px;
-	    position: fixed;
-	    top: 30px;
-	    z-index: 999;
-	    left: 0;
-	    display: flex;
-	    cursor: pointer;
-	    color: red;
+        padding: 8px 0;
+        background: white;
+        border-radius: 0px 10px 10px 0px;
+        width: 55px;
+        position: fixed;
+        top: 30px;
+        z-index: 999;
+        left: 0;
+        display: flex;
+        cursor: pointer;
+        color: red;
     }
-
     #ExitButtonFullScreen img {
         width: 20px;
         margin-left: 5px;
     }
-
     #ExitButtonFullScreen i {
         margin: 6px 0;
         color: #f99090;
     }
-
     .bottom-bar-game-frame {
         height: auto;
     }
-
     #EmbedMobileGame #game-elements {
         position: fixed;
         z-index: 99;
@@ -1145,82 +1246,76 @@ override
         top: 0;
         left: 0;
     }
-	.f2{
-		display: block;
-		font-size: 16px;
-		margin-bottom: 10px;
-	}
-	.f1{
-		font-size: 16px;
-		order: 2;
-	}
-	body{
-		margin-bottom: 100px;
-	}
+    .f2 {
+        display: block;
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    .f1 {
+        font-size: 16px;
+        order: 2;
+    }
+    body {
+        margin-bottom: 100px;
+        overflow-y: auto
+    }
     .col-md-5ths {
         width: 18%;
     }
-	.navbar .is{
-		right: 10px;
-		top: 0;
-	}
+    .navbar .is {
+        right: 10px;
+        top: 0;
+    }
     .navbar-nav {
         display: block;
     }
-
     .search-form {
         width: 100%;
         padding: 0 10px;
     }
-
     .cb span {
         font-size: 13px;
     }
-
     footer a {
         padding: 5px;
     }
-
     #TextBox .card-content {
         padding: 0;
     }
-
     #CarouselComponent {
         padding: 0 0 20px 0;
     }
-
     #CarouselComponent .carousel-inner {
         height: 150px;
     }
-
     #CarouselComponent .w-100 {
         top: -80%;
     }
-	.navbar-collapse{
-		margin-top: 10px;
-	}
-    .nav-link.active,.nav-link {
+    .navbar-collapse {
+        margin-top: 10px;
+    }
+    .nav-link.active,
+    .nav-link {
         border: none;
         background: none;
     }
-
     .navbar {
         padding: 5px;
     }
-    .sac{
-    	height: 220px;
+    .sac {
+        height: 220px;
     }
-    .ac{
-    	height: 240px;
+    .ac {
+        height: 240px;
     }
-    .ac2{
-    	height: 120px;
+    .ac2 {
+        height: 120px;
     }
-    .dropdown .nav-link{
-    	padding: 5px 20px;
+    .dropdown .nav-link {
+        padding: 5px 20px;
     }
-    .dropdown img{
-		width: 30px;
-		height: 30px;
-	}
+    .dropdown img {
+        width: 30px;
+        height: 30px;
+    }
 }
