--- a/user_css/home.css
+++ b/user_css/home.css
@@ -8,6 +8,21 @@
     font-family: "Poppins", sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: hsl(0, 0%, 100%);
+    border-radius: 75vw;
+    margin-block: .5em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #11101D;
+    border-radius: 6px;
+}
+
 .sidebar {
     position: fixed;
     left: 0;
