--- a/user_css/game.css
+++ b/user_css/game.css
@@ -16,6 +16,7 @@ body {
 }
 
 .fullscreen_button {
+    position: absolute;
     background-color: #555555;
     border: none;
     color: white;
@@ -29,6 +30,8 @@ body {
     -webkit-transition-duration: 0.4s;
     /* Safari */
     transition-duration: 0.4s;
+    top: 50rem;
+    left: 54rem;
 }
 
 .fullscreen_button {
@@ -99,4 +102,14 @@ a:link {
     text-align: center;
 }
 
-</style>
+.controls {
+    position: absolute;
+    background: #fff;
+    color: #11103d;
+    border-radius: 6px;
+    width: 170px;
+    height: 180px;
+    text-align: center;
+    top: 171px;
+    right: 250px;
+}
