--- a/user_css/game.css
+++ b/user_css/game.css
@@ -16,7 +16,7 @@ body {
 }
 
 .fullscreen_button {
-    background-color: #555555;
+    position: absolute;
     border: none;
     color: white;
     padding: 20px;
@@ -26,17 +26,45 @@ body {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    opacity: 0.5;
     -webkit-transition-duration: 0.4s;
     /* Safari */
     transition-duration: 0.4s;
 }
 
+.controls_button {
+    position: absolute;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    opacity: 0.5;
+    -webkit-transition-duration: 0.4s;
+    /* Safari */
+    transition-duration: 0.4s;
+}
+
+.controls_button {
+    top: 88%;
+    right: 25%;
+}
+
+.controls_button:hover {
+    opacity: 1
+}
+
 .fullscreen_button {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    top: 88%;
+    right: 22%;
 }
 
 .fullscreen_button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    opacity: 1;
 }
 
 a {
